# api-shipay

./: .gitignore  LICENSE  README.md  alembic.ini  app.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_01_04_1601-7d0ceb273b23_create_users_table.py
application/dto/: __init__.py  create_user_dto.py  read_user_dto.py
application/use_cases/: users_use_case.py
domain/repositories/: users_repository.py
infrastructure/config/: db_session.py  settings.py
infrastructure/http/: __init__.py  cors.py
infrastructure/persistence/models/: __init__.py  claims_model.py  db_base.py  roles_model.py  user_claims_model.py  users_model.py
presentation/: __init__.py
presentation/controllers/: __init__.py  health_controller.py  user_controller.py
presentation/routes/: __init__.py  api_router.py
shared/utils/: __init__.py  password.py
tests/: test_users_use_case.py
