[project]
name = "shipay-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.12.5",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.17.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
